# plaid-dev-distributed

./: .gitattributes  .gitignore  Dockerfile  GO_idxs.txt  README.md  best_idxs.txt  cath_ids_to_drop.txt  consistency_only_pipeline.py  environment.yaml  environment.yml  evaluate_hparams.sh  evaluation_pipeline.py  grid_search.sh  job.sh  job_script.sh  mnist_test_state.json  organism_hierarchy.md  organisms.txt  requirements.txt  requirements_proteins.py  requirements_proteins.txt  run_benchmark.py  sample_conditional.py  sample_protein.py  sampling.py  sampling_callback.py  setup.cfg  setup.py  sweep.sh  sweep.slrm  sweep.yml  test_forward.py  test_hourglass_forward.py  test_sample.py  train.py  train.sh  train.slrm  train_aux_loss.py  train_causal.py  train_compositional.py  (+9 more)
assets/: best_idxs.txt  cath_ids_to_drop.txt  organisms.txt
cached_tensors/: decoder_vocab_21.ckpt
configs/: config_protein_transformer_v1.json  protein.json  protein_karras.json  train_causal.yaml  train_compositional.yaml  train_diffusion.yaml  train_edm.yaml  train_function_organism_cfg.yaml  train_hourglass.yaml  train_hourglass_vq.yaml  train_sequence_decoder.yaml  train_vqvae.yaml
envs/: README.md  base_container.def  environment.yml  requirements.txt  requirements_full.txt
evaluation/: __init__.py  consistency.sh  fold_natural.py  run_decode.py  run_fold.py  run_full_pipeline.py  run_inverse_fold.py  run_sample.py
experiments/: 03_protein_plot.ipynb  _examine_latents.ipynb  _fid_scratch.ipynb  _try_transformer.py  loss_sweep.yml  save_safe_tensors.py  save_tensors_parallel.py  (+2 more)
(+851 files in other folders)
