[metadata]
name = plaid 
version = 0.1
author = Amy X. Lu
author_email = lu.amy326@gmail.com
description = Protein latent diffusion based on Karras et al. (2022) diffusion models
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires = 
    accelerate
    einops
    torch >= 2.0
    torchdiffeq
    torchsde
    tqdm
    wandb
